# lutils

./: .buildinfo  .gitattributes  .gitignore  README.md  core.html  genindex.html  index.html  io.html  objects.inv  plot.html  plotInterpPoints.py  pyproject.toml  search.html  searchindex.js  to-do.txt  utils.html
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/lutils/core/: data.html  manager.html  types.html
_modules/lutils/plot/: plotter.html
_modules/lutils/utils/: base_logger.html
_sources/: plot.rst.txt  plt_cfg.rst.txt
docs/: requirements.txt
docs/source/: conf.py  core.rst  index.rst  io.rst  utils.rst
lutils/: __init__.py  data.py  plot.py  test.py  utils.py
lutils/core/: __init__.py  data.py  log.py  manager.py  sim.py  test.py  test_utils.py  types.py
lutils/io/: __init__.py  loader.py  parser.py
lutils/plot/: __init__.py  plotter.py
lutils/plotting/: __init__.py  plot.py  plot_bfs.py  plot_naca.py  plot_utils.py
lutils/plt_cfg/: __init__.py  labels.py
lutils/utils/: __init__.py  base_logger.py  logger.py  misc.py  sub_logger.py  utils.py
src/lambdaUtility/: __init__.py  checkLambda.py  data.py  log.py  plotInterpPoints.py  pyproject.toml  test.py
src/lambda_utility/: data.py  log.py  plot.py  test.py
src/lutils/: __init__.py  data.py  plot.py  test.py  utility_functions.py
testdata/bfs/openHFDIBRANS_kE/: Allrun
testdata/bfs/openHFDIBRANS_kE/2000/: epsilon  phi  yOrthoi
testdata/bfs/simpleFoam_kE/: log.readAndWriteVelocity
testdata/bfs/simpleFoam_kE/0/: U
testdata/bfs/simpleFoam_kE/351/: U  phi
testdata/bfs/simpleFoam_kE/system/: controlDict
tests/: log.checkLambda
tests/bfs/: log.blockMesh  log.simpleHFDIBRANSFoam
tests/bfs/openHFDIBRANS_kE/: hfdibrans_mesher.py  log.blockMesh  log.createLambdaBFSV3  log.readAndWriteTurbulenceFields  log.readAndWriteVelocity
tests/bfs/simpleFoam_kE/: Allrun  log.blockMesh  log.readAndWriteTurbulenceFields  log.readAndWriteVelocity  log.simpleFoam  simpleMesher.py
(+64 files in other folders)
