[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lutils"
version = "0.0.2"
description = "A library of functions to analyze generated lambda field."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Eriazen/lutils"

[tool.setuptools.packages]
find = {}
