[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lutils"
version = "0.0.3"
description = "A Python library for post-processing OpenFOAM case data."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Eriazen/lutils"

[tool.setuptools.packages]
find = {}
