[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lutils"
version = "1.0.0"
description = "A Python library for managing and post-processing OpenFOAM cases."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/Eriazen/lutils"

[tool.setuptools.packages]
find = {}
